--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,10 @@ language: java
 dist: xenial
 
 jdk:
-  - openjdk8
+- openjdk8
 
 notifications:
   email: true
-
-env:
-  global:
-    - MVN_ARGS="--settings build/.travis.settings.xml"
 
 branches:
   except:
@@ -20,25 +16,67 @@ cache:
   directories:
   - "$HOME/.m2"
 
-jobs:
-  include:
-    - stage: Build and run tests
-    - stage: Run system test with template
-      script:
-        - git clone https://github.ibm.com/CloudEngineering/sdkgen-systest.git
-        - cd sdkgen-systest
-        - ./install_scripts/install_deps_ubuntu.sh
-        - ./setup_and_generate.sh -l ibm-java -t $TRAVIS_BRANCH -s
+env:
+  global:
+    - MVN_ARGS="--settings build/.travis.settings.xml"
+
+stages:
+  - name: Build-Test
+# Uncomment these stages when you're ready to use them.
+#  - name: Semantic-Release
+#    if: branch = main AND type = push AND fork = false
+#  - name: Publish-Release
+#    if: tag IS present
 
 before_install:
-- sudo apt-get update
-- sudo apt-get install python
-- nvm install 12
-- npm install -g npm@6.x
-- echo -e "machine github.ibm.com\n  login $GITHUB_OAUTH_TOKEN" > ~/.netrc
+  - sudo apt-get update
+  - env | grep TRAVIS
 
-install:
-- curl -s https://codecov.io/bash > $HOME/codecov-bash.sh && chmod +x $HOME/codecov-bash.sh
+jobs:
+  include:
+    - stage: Build-Test
+      jdk: openjdk8
+      install:
+        - curl -s https://codecov.io/bash > $HOME/codecov-bash.sh && chmod +x $HOME/codecov-bash.sh
+      script:
+        - build/setMavenVersion.sh
+        - mvn verify -fae -DskipITs $MVN_ARGS
+      after_success:
+        - build/publishCodeCoverage.sh
 
-script:
--  mvn clean verify $MVN_ARGS
+# Uncomment these stages when you're ready to use them.
+#    - stage: Semantic-Release
+#      install:
+#        - sudo apt-get install python
+#        - nvm install 12
+#        - npm install -g npm@6.x
+#        - pip install --user bump2version
+#        - npm install @semantic-release/changelog
+#        - npm install @semantic-release/exec
+#        - npm install @semantic-release/git
+#        - npm install @semantic-release/github
+#      script:
+#        - npx semantic-release
+#      after_success:
+#        - echo "Semantic release has successfully created a new tagged-release"
+#
+#    - stage: Publish-Release
+#      jdk: openjdk8
+#      name: Publish-Javadoc
+#      install: true
+#      script:
+#        - build/setMavenVersion.sh
+#        - mvn clean javadoc:aggregate $MVN_ARGS
+#        - build/publishJavadoc.sh
+#      after_success:
+#        - echo "Javadocs successfully published to gh-pages!"
+#
+#    - jdk: openjdk8
+#      name: Publish-To-Maven-Central
+#      install: true
+#      script:
+#        - build/setupSigning.sh
+#        - build/setMavenVersion.sh
+#        - mvn deploy $MVN_ARGS -DskipTests -P central
+#      after_success:
+#        - echo "Maven artifacts successfully published to Maven Central!"
