--- a/modules/examples/pom.xml
+++ b/modules/examples/pom.xml
@@ -3,13 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>my-services</artifactId>
+        <artifactId>data-virtualization-on-cloud</artifactId>
         <groupId>com.ibm.cloud</groupId>
         <version>99-SNAPSHOT</version>
         <relativePath>../..</relativePath>
     </parent>
 
-    <artifactId>my-services-examples</artifactId>
+    <artifactId>data-virtualization-on-cloud-examples</artifactId>
     <packaging>jar</packaging>
     <name>Code Examples</name>
 
@@ -23,7 +23,7 @@
             below should reflect the "artifactId" value specified in each module's pom.xml file (i.e. not the module's directory name). -->
         <dependency>
             <groupId>com.ibm.cloud</groupId>
-            <artifactId>example-service</artifactId>
+            <artifactId>data-virtualization-on-cloud</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
