--- a/modules/data-virtualization/pom.xml
+++ b/modules/data-virtualization/pom.xml
@@ -6,7 +6,7 @@
         <!-- >>> Replace this with the parent pom's artifactId -->
         <artifactId>data-virtualization-on-cloud</artifactId>
         <groupId>com.ibm.cloud</groupId>
-        <version>99-SNAPSHOT</version>
+        <version>0.0.1</version>
         <relativePath>../..</relativePath>
     </parent>
 
@@ -26,12 +26,12 @@
             <!-- >>> Replace this with the "common" module's artifactId (e.g. my-services-common) -->
             <artifactId>data-virtualization-on-cloud-common</artifactId>
             <groupId>com.ibm.cloud</groupId>
-            <version>99-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
         <dependency>
             <artifactId>data-virtualization-on-cloud-common</artifactId>
             <groupId>com.ibm.cloud</groupId>
-            <version>99-SNAPSHOT</version>
+            <version>0.0.1</version>
             <type>test-jar</type>
             <classifier>tests</classifier>
             <scope>test</scope>
