--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,10 @@ env:
 stages:
   - name: Build-Test
 # Uncomment these stages when you're ready to use them.
-#  - name: Semantic-Release
-#    if: branch = main AND type = push AND fork = false
-#  - name: Publish-Release
-#    if: tag IS present
+  - name: Semantic-Release
+    if: branch = main AND type = push AND fork = false
+  - name: Publish-Release
+    if: tag IS present
 
 before_install:
   - sudo apt-get update
@@ -35,7 +35,7 @@ before_install:
 jobs:
   include:
     - stage: Build-Test
-      jdk: openjdk8
+      jdk: openjdk11
       install:
         - curl -s https://codecov.io/bash > $HOME/codecov-bash.sh && chmod +x $HOME/codecov-bash.sh
       script:
@@ -45,38 +45,38 @@ jobs:
         - build/publishCodeCoverage.sh
 
 # Uncomment these stages when you're ready to use them.
-#    - stage: Semantic-Release
-#      install:
-#        - sudo apt-get install python
-#        - nvm install 12
-#        - npm install -g npm@6.x
-#        - pip install --user bump2version
-#        - npm install @semantic-release/changelog
-#        - npm install @semantic-release/exec
-#        - npm install @semantic-release/git
-#        - npm install @semantic-release/github
-#      script:
-#        - npx semantic-release
-#      after_success:
-#        - echo "Semantic release has successfully created a new tagged-release"
-#
-#    - stage: Publish-Release
-#      jdk: openjdk8
-#      name: Publish-Javadoc
-#      install: true
-#      script:
-#        - build/setMavenVersion.sh
-#        - mvn clean javadoc:aggregate $MVN_ARGS
-#        - build/publishJavadoc.sh
-#      after_success:
-#        - echo "Javadocs successfully published to gh-pages!"
-#
-#    - jdk: openjdk8
-#      name: Publish-To-Maven-Central
-#      install: true
-#      script:
-#        - build/setupSigning.sh
-#        - build/setMavenVersion.sh
-#        - mvn deploy $MVN_ARGS -DskipTests -P central
-#      after_success:
-#        - echo "Maven artifacts successfully published to Maven Central!"
+    - stage: Semantic-Release
+      install:
+        - sudo apt-get install python
+        - nvm install 12
+        - npm install -g npm@6.x
+        - pip install --user bump2version
+        - npm install @semantic-release/changelog
+        - npm install @semantic-release/exec
+        - npm install @semantic-release/git
+        - npm install @semantic-release/github
+      script:
+        - npx semantic-release
+      after_success:
+        - echo "Semantic release has successfully created a new tagged-release"
+
+    - stage: Publish-Release
+      jdk: openjdk11
+      name: Publish-Javadoc
+      install: true
+      script:
+        - build/setMavenVersion.sh
+        - mvn clean javadoc:aggregate $MVN_ARGS
+        - build/publishJavadoc.sh
+      after_success:
+        - echo "Javadocs successfully published to gh-pages!"
+
+    - jdk: openjdk11
+      name: Publish-To-Maven-Central
+      install: true
+      script:
+        - build/setupSigning.sh
+        - build/setMavenVersion.sh
+        - mvn deploy $MVN_ARGS -DskipTests -P central
+      after_success:
+        - echo "Maven artifacts successfully published to Maven Central!"
