--- a/modules/common/pom.xml
+++ b/modules/common/pom.xml
@@ -1,75 +1,104 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns="http://maven.apache.org/POM/4.0.0"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <!-- >>> Replace this with the parent pom's artifactId -->
-        <artifactId>data-virtualization-on-cloud</artifactId>
-        <groupId>com.ibm.cloud</groupId>
-        <version>0.0.1</version>
-        <relativePath>../..</relativePath>
-    </parent>
+	<parent>
+		<!-- >>> Replace this with the parent pom's artifactId -->
+		<artifactId>data-virtualization-on-cloud</artifactId>
+		<groupId>com.ibm.cloud</groupId>
+		<version>0.0.1</version>
+		<relativePath>../..</relativePath>
+	</parent>
 
-    <!-- >>> Replace this with the common module's artifactId (e.g. platform-services-common) -->
-    <artifactId>data-virtualization-on-cloud-common</artifactId>
+	<!-- >>> Replace this with the common module's artifactId (e.g. platform-services-common) -->
+	<artifactId>data-virtualization-on-cloud-common</artifactId>
 
-    <!-- >>> Replace this with the common module's description (e.g. Platform Services Common Library) -->
-    <name>Data Virtualization on Cloud Common Library</name>
-    <packaging>jar</packaging>
+	<!-- >>> Replace this with the common module's description (e.g. Platform 
+		Services Common Library) -->
+	<name>Data Virtualization on Cloud Common Library</name>
+	<packaging>jar</packaging>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.ibm.cloud</groupId>
-            <artifactId>sdk-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-mockito2</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-module-testng</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-    <build>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-                <includes>
-                    <include>${project.parent.artifactId}.properties</include>
-                </includes>
-            </resource>
-        </resources>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+	<dependencies>
+		<dependency>
+			<groupId>com.ibm.cloud</groupId>
+			<artifactId>sdk-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito2</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-testng</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+				<includes>
+					<include>${project.parent.artifactId}.properties</include>
+				</includes>
+			</resource>
+		</resources>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>test-jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>net.ju-n.maven.plugins</groupId>
+				<artifactId>checksum-maven-plugin</artifactId>
+				<version>1.4</version>
+				<executions>
+					<execution>
+						<id>checksum-maven-plugin-files</id>
+						<phase>package</phase>
+						<goals>
+							<goal>files</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<fileSets>
+						<fileSet>
+							<directory>${project.build.directory}</directory>
+							<includes>
+								<include>*.jar</include>
+							</includes>
+						</fileSet>
+					</fileSets>
+					<algorithms>
+						<algorithm>SHA-1</algorithm>
+						<algorithm>MD5</algorithm>
+					</algorithms>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
-    <developers>
-        <developer>
-            <name>IBM Cloud DevX SDK Development</name>
-            <email>devxsdk@us.ibm.com</email>
-            <url>https://www.ibm.com/</url>
-        </developer>
-    </developers>
+	<developers>
+		<developer>
+			<name>IBM Cloud DevX SDK Development</name>
+			<email>devxsdk@us.ibm.com</email>
+			<url>https://www.ibm.com/</url>
+		</developer>
+	</developers>
 
 </project>
