--- a/modules/coverage-reports/pom.xml
+++ b/modules/coverage-reports/pom.xml
@@ -1,72 +1,98 @@
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <!-- Update this section to reflect the correct values for your SDK project -->
-    <parent>
-        <!-- >>> Update this to reflect your parent project's artifact id -->
-        <artifactId>data-virtualization-on-cloud</artifactId>
-        <groupId>com.ibm.cloud</groupId>
-        <version>0.0.1</version>
-        <relativePath>../..</relativePath>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<!-- Update this section to reflect the correct values for your SDK project -->
+	<parent>
+		<!-- >>> Update this to reflect your parent project's artifact id -->
+		<artifactId>data-virtualization-on-cloud</artifactId>
+		<groupId>com.ibm.cloud</groupId>
+		<version>0.0.1</version>
+		<relativePath>../..</relativePath>
+	</parent>
+	<modelVersion>4.0.0</modelVersion>
 
-    <!-- >>> Replace this with the coverage-report module's artifactId (e.g. platform-services-coverage-reports) -->
-    <artifactId>data-virtualization-on-cloud-coverage-reports</artifactId>
+	<!-- >>> Replace this with the coverage-report module's artifactId (e.g. 
+		platform-services-coverage-reports) -->
+	<artifactId>data-virtualization-on-cloud-coverage-reports</artifactId>
 
-    <!-- >>> Replace this with the coverage-report module's description -->
-    <name>Data Virtualization on Cloud Coverage Reports</name>
+	<!-- >>> Replace this with the coverage-report module's description -->
+	<name>Data Virtualization on Cloud Coverage Reports</name>
 
-    <properties>
-	<!-- There is no need to publish this module's artifacts on maven central -->
-        <maven.deploy.skip>true</maven.deploy.skip>
-        <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
-    </properties>
+	<properties>
+		<!-- There is no need to publish this module's artifacts on maven central -->
+		<maven.deploy.skip>true</maven.deploy.skip>
+		<skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
+	</properties>
 
-    <dependencies>
-        <!-- 
-            There should be a dependency for EACH module in the project.
-            Add new "dependency" entries here as needed when you add modules to your parent pom.xml.
-            This will ensure that an aggregate code coverage report contains information for all of your modules.
-            Note: the "artifactId" values below should reflect the "artifactId" value specified in each module's
-            pom.xml file (i.e. not the module's directory name).
-        -->
-        <dependency>
-            <!-- >>> Replace this with the common module's artifactId -->
-            <artifactId>data-virtualization-on-cloud-common</artifactId>
-            <groupId>${project.groupId}</groupId>
-            <version>${project.version}</version>
-        </dependency>
+	<dependencies>
+		<!-- There should be a dependency for EACH module in the project. Add new 
+			"dependency" entries here as needed when you add modules to your parent pom.xml. 
+			This will ensure that an aggregate code coverage report contains information 
+			for all of your modules. Note: the "artifactId" values below should reflect 
+			the "artifactId" value specified in each module's pom.xml file (i.e. not 
+			the module's directory name). -->
+		<dependency>
+			<!-- >>> Replace this with the common module's artifactId -->
+			<artifactId>data-virtualization-on-cloud-common</artifactId>
+			<groupId>${project.groupId}</groupId>
+			<version>${project.version}</version>
+		</dependency>
 
-        <!-- Copy and update this section for each service added to the project. -->
-<!--        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>example-service</artifactId>
-            <version>${project.version}</version>
-        </dependency>
--->    </dependencies>
+		<!-- Copy and update this section for each service added to the project. -->
+		<!-- <dependency> <groupId>${project.groupId}</groupId> <artifactId>example-service</artifactId> 
+			<version>${project.version}</version> </dependency> -->
+	</dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>default-report</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>report-aggregate</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>report-aggregate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>default-report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report-aggregate</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report-aggregate</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>net.ju-n.maven.plugins</groupId>
+				<artifactId>checksum-maven-plugin</artifactId>
+				<version>1.4</version>
+				<executions>
+					<execution>
+						<id>checksum-maven-plugin-files</id>
+						<phase>package</phase>
+						<goals>
+							<goal>files</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<fileSets>
+						<fileSet>
+							<directory>${project.build.directory}</directory>
+							<includes>
+								<include>*.jar</include>
+							</includes>
+						</fileSet>
+					</fileSets>
+					<algorithms>
+						<algorithm>SHA-1</algorithm>
+						<algorithm>MD5</algorithm>
+					</algorithms>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
