--- a/modules/examples/pom.xml
+++ b/modules/examples/pom.xml
@@ -1,63 +1,66 @@
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.ibm.cloud</groupId>
+		<artifactId>data-virtualization-on-cloud</artifactId>
+		<version>0.0.1</version>
+		<relativePath>../..</relativePath>
+	</parent>
 
-    <parent>
-        <artifactId>data-virtualization-on-cloud</artifactId>
-        <groupId>com.ibm.cloud</groupId>
-        <version>99-SNAPSHOT</version>
-        <relativePath>../..</relativePath>
-    </parent>
-
-    <artifactId>data-virtualization-on-cloud-examples</artifactId>
-    <packaging>jar</packaging>
-    <name>Code Examples</name>
-
-    <properties>
-        <maven.javadoc.skip>true</maven.javadoc.skip>
-    </properties>
-
-    <dependencies>
-        <!-- There should be a dependency for each module whose request example class exists in this "examples" module. Add 
-            new "dependency" entries here as needed when you add a request examples class for a new service. Note: the "artifactId" values 
-            below should reflect the "artifactId" value specified in each module's pom.xml file (i.e. not the module's directory name). -->
-        <dependency>
-            <groupId>com.ibm.cloud</groupId>
-            <artifactId>data-virtualization-on-cloud</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-jdk14</artifactId>
-        </dependency>
-    </dependencies>
-    
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <!-- Build an executable JAR -->
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>com.ibm.cloud.my_services.example_service.v1.ExampleServiceExamples</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-    <developers>
-        <developer>
-            <name>IBM Cloud DevX SDK Development</name>
-            <email>devxsdk@us.ibm.com</email>
-            <url>https://www.ibm.com/</url>
-        </developer>
-    </developers>
+	<artifactId>data-virtualization-on-cloud-examples</artifactId>
+	<packaging>jar</packaging>
+	<name>Data Virtualization on Cloud Code Examples</name>
+	<dependencies>
+		<dependency>
+			<groupId>com.ibm.cloud</groupId>
+			<artifactId>data-virtualization</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk14</artifactId>
+			<version>${slf4j-version}</version>
+		</dependency>
+	</dependencies>
+	<developers>
+		<developer>
+			<name>IBM Cloud DevX SDK Development</name>
+			<email>devxsdk@us.ibm.com</email>
+			<url>https://www.ibm.com/</url>
+		</developer>
+	</developers>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>net.ju-n.maven.plugins</groupId>
+				<artifactId>checksum-maven-plugin</artifactId>
+				<version>1.4</version>
+				<executions>
+					<execution>
+						<id>checksum-maven-plugin-files</id>
+						<phase>package</phase>
+						<goals>
+							<goal>files</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<fileSets>
+						<fileSet>
+							<directory>${project.build.directory}</directory>
+							<includes>
+								<include>*.jar</include>
+							</includes>
+						</fileSet>
+					</fileSets>
+					<algorithms>
+						<algorithm>SHA-1</algorithm>
+						<algorithm>MD5</algorithm>
+					</algorithms>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
