--- a/modules/common/pom.xml
+++ b/modules/common/pom.xml
@@ -7,7 +7,7 @@
 		<!-- >>> Replace this with the parent pom's artifactId -->
 		<artifactId>data-virtualization-on-cloud</artifactId>
 		<groupId>com.ibm.cloud</groupId>
-		<version>0.0.1</version>
+		<version>99-SNAPSHOT</version>
 		<relativePath>../..</relativePath>
 	</parent>
 
