--- a/modules/data-virtualization/pom.xml
+++ b/modules/data-virtualization/pom.xml
@@ -7,7 +7,7 @@
 		<!-- >>> Replace this with the parent pom's artifactId -->
 		<artifactId>data-virtualization-on-cloud</artifactId>
 		<groupId>com.ibm.cloud</groupId>
-		<version>0.0.1</version>
+		<version>99-SNAPSHOT</version>
 		<relativePath>../..</relativePath>
 	</parent>
 
@@ -28,12 +28,12 @@
 			<!-- >>> Replace this with the "common" module's artifactId (e.g. my-services-common) -->
 			<artifactId>data-virtualization-on-cloud-common</artifactId>
 			<groupId>com.ibm.cloud</groupId>
-			<version>0.0.1</version>
+			<version>99-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<artifactId>data-virtualization-on-cloud-common</artifactId>
 			<groupId>com.ibm.cloud</groupId>
-			<version>0.0.1</version>
+			<version>99-SNAPSHOT</version>
 			<type>test-jar</type>
 			<classifier>tests</classifier>
 			<scope>test</scope>
