--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<url>https://github.com/IBM/data-virtualization-on-cloud-java-sdk</url>
 
 	<groupId>com.ibm.cloud</groupId>
-	<version>0.0.1</version>
+	<version>99-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<properties>
