fix(pom.xml): revert the version from 0.0.1 to 99-SNAPSHOT for pom.xml

--- a/modules/examples/pom.xml
+++ b/modules/examples/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.ibm.cloud</groupId>
 		<artifactId>data-virtualization-on-cloud</artifactId>
-		<version>0.0.1</version>
+		<version>99-SNAPSHOT</version>
 		<relativePath>../..</relativePath>
 	</parent>
 
